// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default Carousel 1`] = `
<div
  className="ola_carousel"
>
  <div
    className="ola_carousel-container"
  >
    <button
      className="ola_button_icon is-normal is-disabled"
      disabled={true}
      onClick={[Function]}
      style={
        Object {
          "--base-color": "var(--color-neutral-500)",
          "--busy-color": "var(--color-neutral-600)",
          "--disabled-color": "var(--color-neutral-300)",
          "--shadow-focus": "var(--shadow-focus-neutral)",
        }
      }
    />
    <p>
      item 1
    </p>
    <button
      className="ola_button_icon is-normal"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "--base-color": "var(--color-neutral-500)",
          "--busy-color": "var(--color-neutral-600)",
          "--disabled-color": "var(--color-neutral-300)",
          "--shadow-focus": "var(--shadow-focus-neutral)",
        }
      }
    />
  </div>
  <div
    className="ola_carousel-dots"
  >
    <div
      className="ola_carousel-dots-item is-selected"
      onClick={[Function]}
    />
    <div
      className="ola_carousel-dots-item"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Extra class Carousel 1`] = `
<div
  className="ola_carousel ola-margin-top-2"
>
  <div
    className="ola_carousel-container"
  >
    <button
      className="ola_button_icon is-normal is-disabled"
      disabled={true}
      onClick={[Function]}
      style={
        Object {
          "--base-color": "var(--color-neutral-500)",
          "--busy-color": "var(--color-neutral-600)",
          "--disabled-color": "var(--color-neutral-300)",
          "--shadow-focus": "var(--shadow-focus-neutral)",
        }
      }
    />
    <p>
      item 1
    </p>
    <button
      className="ola_button_icon is-normal"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "--base-color": "var(--color-neutral-500)",
          "--busy-color": "var(--color-neutral-600)",
          "--disabled-color": "var(--color-neutral-300)",
          "--shadow-focus": "var(--shadow-focus-neutral)",
        }
      }
    />
  </div>
  <div
    className="ola_carousel-dots"
  >
    <div
      className="ola_carousel-dots-item is-selected"
      onClick={[Function]}
    />
    <div
      className="ola_carousel-dots-item"
      onClick={[Function]}
    />
  </div>
</div>
`;
